Thu Feb 14 17:00:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* config/locale.alias, gui/gdmlanguages.c:  Fix for
	  bug #155778.  Patch provided by Steve Murphy.

Thu Feb 14 16:52:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* daemon/server.c, gui/gdmXnestchooser.c, gui/gdmlogin.c, 
	  gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c: Cleanup patch by
	  Mark McLoughlin, bug #151668.
	  
Thu Feb 14 16:42:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* config/gdm.conf.in, daemon/gdm.h, docs/C/gdm.xml,
	  gui/gdmlogin.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_canvas_item.c, 
	  gui/greeter/greeter_configuration.h:
	  Fixes bug #151018.  Patch provided by John
	  Martinsson.

Thu Feb 14 16:25:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	Patch provided by Bill Haneman.
        * gui/gdmwm.c:
        (add_deco): Add PropertyChangeMask to notify mask.
        (gdm_wm_update_struts): New, listen for strut changes.
        (constrain_window): New, make sure a window doesn't overlap
        struts that it doesn't own.
        (event_process): Handle PropertyNotify events,
        and call gdm_wm_update_struts and constrain_all_windows
        if _NET_WM_STRUT property changes.
        (constrain_all_windows): New, constrain all windows in the
        gdmwm list.
        Fixes bug #143634.

Thu Feb 14 16:20:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	Patch provided by Bill Haneman.
	* acconfig.h, gui/modules/Makefile.am, 
	  gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c:  Updated files to 
	  also integrate patch for bug #142834.
	
Thu Feb 14 15:10:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	Patch provided by Bill Haneman.
	* configure.in, gui/modules/AccessKeyMouseEvents.in,
	  gui/modules/Makefile.am, gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c: Update gesture 
	  listeners so that they listen for XInput events.  Also
	  adds better default gestures for gok and gnopernicus.