@@ -1,3 +1,9 @@
+Thu Feb 14 17:10:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>
+
+	* daemon/display.c, daemon/gdm.h, daemon/server.c,
+	  daemon/slave.c:  Fix for bug #160068.  Patch
+	  provided by Mark McLoughlin.  
+
 Thu Feb 14 17:00:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>
 
 	* config/locale.alias, gui/gdmlanguages.c:  Fix for
